--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id", "console.log"]}]
+    "no-underscore-dangle": ["error", { "allow": ["_id"]}]
   },
     "extends": "airbnb-base"
 }
