--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"]}]
+    "no-underscore-dangle": ["error", { "allow": ["_id"]}],
+    "linebreak-style": 0,
+    "consistent-return": 0,
+    "func-names": 0
   },
     "extends": "airbnb-base"
 }
